# RNN-Text-Gen

./: Cargo.toml  README.md
src/: lstm.rs  main.rs  rnn.rs
