[package]
name = "rnn-text-gen"
version = "0.1.0"
edition = "2021"
authors = ["Antoine Groudiev"]
description = "A small language model using a Recurrent Neural Network to generate text based on a corpus."
readme = "README.md"
repository = "https://github.com/Red-Rapious/RNN-Text-Gen"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = { version = "0.33.0", features = ["rand"] }
rand = "0.8.5"
rand_distr = "0.4.3"
